manifests/ch05/bookinfo-reviews-proxy.yaml
apiVersion: v1
kind: Service
metadata:
  name: reviews-proxy
  namespace: bookinfo
  labels:
    app: reviews-proxy
spec:
  ports:
  - name: http
    port: 9080
    targetPort: 10000
  selector:
    app: reviews-proxy
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reviews-proxy
  namespace: bookinfo
  labels:
    app: reviews-proxy
spec:
  replicas: 2
  selector:
    matchLabels:
      app: reviews-proxy
  template:
    metadata:
      labels:
        app: reviews-proxy
    spec:
      containers:
      - name: envoy
        image: envoyproxy/envoy:v1.26.2
        imagePullPolicy: IfNotPresent
        args:
        - --config-path
        - /etc/envoy/envoy-custom.yaml
        ports:
        - name: http
          containerPort: 10000
        - name: admin
          containerPort: 9901
        volumeMounts:
        - name: envoy-config
          mountPath: /etc/envoy
      volumes:
      - name: envoy-config 
        configMap:
          name: reviews-proxy
          items:
          - key: envoy-custom.yaml
            path: ./envoy-custom.yaml
---
apiVersion: v1
kind: ConfigMap
metadata:
  name: reviews-proxy
  namespace: bookinfo
  labels:
    app: reviews-proxy
data:
  envoy-custom.yaml: |
    static_resources:

      listeners:
      - name: listener_0
        address:
          socket_address:
            address: 0.0.0.0
            port_value: 10000
        filter_chains:
        - filters:
          - name: envoy.filters.network.http_connection_manager
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              stat_prefix: ingress_http
              access_log:
              - name: envoy.access_loggers.stdout
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog
              http_filters:
              - name: envoy.filters.http.router
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
              route_config:
                name: local_route
                virtual_hosts:
                - name: local_service
                  domains: ["*"]
                  routes:
                  - match:
                      prefix: "/"
                    route:
                      host_rewrite_literal: reviews
                      cluster: reviews

      clusters:
      - name: reviews
        type: LOGICAL_DNS
        dns_lookup_family: V4_ONLY
        load_assignment:
          cluster_name: reviews
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: reviews
                    port_value: 9080
